--- a/Assets/styles.css
+++ b/Assets/styles.css
@@ -1,3 +1,172 @@
-h1{
-    color: aqua;
-}
+body {
+    padding: 0;
+    margin: 0;
+    overflow-y: hidden;
+  }
+
+  @import url("https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap");
+
+  /* global styles */
+
+  .p-bold {
+    font-family: PT Sans;
+    font-size: 1rem;
+    font-weight: 700;
+  }
+
+  .form-text {
+    font-family: PT Sans;
+    font-size: 1.25rem;
+    font-weight: 700;
+    color: #2b2d4a;
+  }
+
+
+  /* Header */
+  header {
+    position: relative;
+    padding-top: 0.5em;
+    width: 100vw;
+    background-color: #fff;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  }
+  
+  .header-container {
+    margin-left: 9em;
+  }
+  
+  .logo {
+    width: 10vw;
+  }
+
+/* Sign in Section */
+
+div.sign-in {
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    flex-direction: row;
+  }
+
+div.sign-in-left {
+    width: 55%;
+    background-color: #ffffff;
+  }
+
+div.sign-in-right {
+    width: 45%;
+    background-color: #f4f5f7;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+  }
+
+  /* Sign in Left */
+
+  div.left-container {
+    height: 100%;
+    margin-left: 9em;
+    display: flex;
+    flex-direction: column;
+    
+  }
+
+  div.link-back {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
+  
+  .arrow {
+    width: 0.47em;
+    height: 0.75em;
+    margin-right: 0.625em;
+  }
+
+
+  div.form-info h2{
+    font-size: 2.2rem;
+    font-family: PT Sans;
+    font-weight: 400;
+    margin-bottom: 1em;
+  }
+
+  div.form-input {
+    margin-bottom: 2em;
+  }
+
+  input {
+    width: 28vw;
+    padding: 1em 0.8em;
+    border-style: solid;
+    border-radius: 8px;
+    border-color: #6e6e89;
+  }
+
+  button.log-in {
+    color: #f5f5f2;
+    font-family: PT Sans;
+    font-weight: 700;
+    font-size: 1.18rem;
+    padding: 0.81em 2.25em;
+    background-color: #603392;
+    border-radius: 8px;
+  }
+
+  div.alt-sign-in {
+    margin-top: 4em;
+  }
+
+  div.google {
+    border: #3e82f7;
+    border-style: solid;
+    width: 28vw;
+    border-radius: 8px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 1em;
+    padding: 0.8em;
+  }
+
+  div.facebook {
+    border: #3b5998;
+    border-style: solid;
+    width: 28vw;
+    border-radius: 8px;
+    display: flex;
+    align-items: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 2em;
+    padding: 0.8em;
+  }
+  
+  div.google p,
+  div.facebook p {
+    margin-top: 0;
+    margin-bottom: 0;
+    margin-left: 0.5em;
+  }
+
+  /* Sign in Right */
+
+  div.right-container img {
+    width: 25.75em;
+    height: auto;
+  }
+  
+  div.right-container h1 {
+    font-family: PT Sans;
+    font-size: 2.8rem;
+    font-weight: 400;
+  }
+  
+  div.right-container h3 {
+    font-family: PT Sans;
+    font-weight: 400;
+    font-size: 1.6rem;
+  }
